🚧 WIP: fix(style): display inline schema fields (#19)
* 🎨fix(style): display inline schema fields

* 🚀 deploy(stage): allow manual deploys

* 🎨fix(style): display inline schemas

* Squashed commit of the following:

commit ce616a3c6316a36206d34461c52cecab5de49b6d
Author: Alejandro López <alejandrolopez.gd@gmail.com>
Date:   Mon Feb 1 16:09:46 2021 -0300

    ✨ feat(content): document web Market Report (#17)

    * ✨ feat(content): document web Market Report

    * 🚀 deploy(stage): allow manual deploys


commit 79058d0cf84c6659d95dd1f09c5143a7dd64e20e
Author: Alejandro L <alejandrolopez.gd@admetricks.com>
Date:   Mon Feb 1 14:29:59 2021 -0300

    🚀 deploy(stage): allow manual deploys

* 🎨 remove api_version

--- a/source/stylesheets/components/_details.scss
+++ b/source/stylesheets/components/_details.scss
@@ -3,6 +3,8 @@ details {
   padding: 0.2em 1em;
   summary {
     padding: 1em;
+    outline: none;
+    cursor: pointer;
   }
   &[open] summary ~ * {
     animation: open 100ms;
